# claude-remote-bot

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
scripts/: install.sh  run-bot.sh  wsl-watchdog.ps1
src/: __init__.py  main.py
src/bot/: __init__.py  core.py  orchestrator.py
src/bot/features/: __init__.py  file_handler.py  git_integration.py  image_handler.py  quick_actions.py  session_export.py  voice_handler.py
src/bot/handlers/: callback.py  command.py  document.py  media.py  message.py  photo.py
src/bot/middleware/: __init__.py  auth.py  rate_limit.py  security.py
src/bot/utils/: constants.py  formatting.py  messages.py
src/claude/: __init__.py  exceptions.py  facade.py  monitor.py  sanitizer.py  sdk_integration.py  session.py
src/config/: __init__.py  features.py  settings.py
src/events/: __init__.py  bus.py  handlers.py  types.py
src/monitor/: __init__.py  alerts.py  collector.py  reporter.py
src/notifications/: __init__.py  service.py
src/security/: __init__.py  audit.py  auth.py  rate_limiter.py  validators.py
src/storage/: __init__.py  database.py  facade.py  models.py  repositories.py
src/tunnel/: __init__.py  manager.py  notifier.py
tests/: __init__.py  conftest.py  test_auth.py  test_bot_core.py  test_claude_bridge.py  test_config.py  test_monitor.py  test_storage.py  test_tunnel.py  test_validators.py
